update dockerfile wasi

--- a/microservices/keycloak/logical-server/dockerfile
+++ b/microservices/keycloak/logical-server/dockerfile
@@ -16,10 +16,20 @@ RUN cargo build --target wasm32-wasi --release
 FROM debian:bullseye-slim
 
 # Installation des dépendances pour WasmEdge
-RUN apt-get update && apt-get -y install curl git python
+RUN apt-get update && apt-get upgrade && apt-get -y install curl git python && \
+    apt-get remove --purge -y openssh-server && \   
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    groupadd -r appuser && useradd -r -g appuser appuser
+
+RUN chmod -w /etc/passwd
 
 # Installation du runtime WasmEdge
+
 RUN curl -sSf https://raw.githubusercontent.com/WasmEdge/WasmEdge/master/utils/install.sh | bash -s -- -p /usr/local
+
+RUN apt-get remove --purge -y curl && \   
+    apt-get clean && \
 
 WORKDIR /app
 COPY --from=builder /app/target/wasm32-wasi/release/wasi_server.wasm .
@@ -27,5 +37,6 @@ COPY --from=builder /app/target/wasm32-wasi/release/wasi_server.wasm .
 # Expose ports
 EXPOSE $WASI_PORT
 
-ENTRYPOINT ["wasmedge", "/app/wasi_server.wasm"]
+USER appuser
 
+ENTRYPOINT ["wasmedge", "/app/wasi_server.wasm"]
