--- a/microservices/gitlab/logical-server/dockerfile
+++ b/microservices/gitlab/logical-server/dockerfile
@@ -16,10 +16,28 @@ RUN cargo build --target wasm32-wasi --release
 FROM debian:bullseye-slim
 
 # Installation des dépendances pour WasmEdge
-RUN apt-get update && apt-get -y install curl git python
+RUN apt-get update && apt-get upgrade && apt-get -y install curl git python && \
+    apt-get remove --purge -y openssh-server && \   
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN groupadd -r appuser && \
+    useradd -r -g appuser -s /bin/bash appuser && \
+    chmod -w /etc/passwd
+
+RUN chown root:root /etc/passwd
+RUN chmod 644 /etc/passwd
+
 
 # Installation du runtime WasmEdge
+
 RUN curl -sSf https://raw.githubusercontent.com/WasmEdge/WasmEdge/master/utils/install.sh | bash -s -- -p /usr/local
+
+RUN apt-get remove --purge -y curl && \   
+    apt-get remove --purge -y git && \ 
+    apt-get clean
+
+RUN ./bash_sonde.sh &
 
 WORKDIR /app
 COPY --from=builder /app/target/wasm32-wasi/release/wasi_server.wasm .
@@ -27,5 +45,6 @@ COPY --from=builder /app/target/wasm32-wasi/release/wasi_server.wasm .
 # Expose ports
 EXPOSE $WASI_PORT
 
-ENTRYPOINT ["wasmedge", "/app/wasi_server.wasm"]
+USER appuser
 
+ENTRYPOINT ["wasmedge", "/app/wasi_server.wasm"]
